compiler/testData/diagnostics/tests/regressions/TypeParameterAsASupertype.kt
class A<T> : <!SUPERTYPE_NOT_A_CLASS_OR_INTERFACE!>T<!> {}